--- a/css/menu.css
+++ b/css/menu.css
@@ -119,7 +119,12 @@
   display: block;
   padding: 0;
 }
-
+.button{
+  background-color: rgb(0, 98, 255);
+  padding: 5x;
+  border-radius: 2px;
+ 
+}
 .wsmenu > .wsmenu-list > li {
   text-align: center;
   display: block;
@@ -131,7 +136,6 @@
 
 .wsmenu > .wsmenu-list > li > a {
   display: block;
-  color: #666;
   font-size: 15px;
   font-weight: 700;
   letter-spacing: 0.5px;
