--- a/css/blue-theme.css
+++ b/css/blue-theme.css
@@ -2576,6 +2576,8 @@ p.video-txt-sm {
   text-align: right;
   top: 35px;
   width: 0;
+  color:#fff;
+
 }
 
 .wsmenu > .wsmenu-list > li.reg-fst-link > a {
