--- a/css/menu.css
+++ b/css/menu.css
@@ -38,6 +38,12 @@
 .para{
   color:rgb(64, 173, 241);
 }
+.para:hover{
+  background-color: #2e78d2;
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+}
 .wsmenu img {
   border: 0 none;
   max-width: 100%;
