--- a/css/blue-theme.css
+++ b/css/blue-theme.css
@@ -24,7 +24,9 @@ html {
   -webkit-font-smoothing: antialiased;
   font-size: 16px;
 } 
-
+#mlc-logo{
+  margin-left: 10px;
+}
 body {
   font-family: 'Rubik', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #6c757d;
