--- a/css/menu.css
+++ b/css/menu.css
@@ -115,9 +115,10 @@
 /* Header Logo */
 .desktoplogo {
   padding: 0;
-  margin: 0;
+  margin:0;
   float: left;
   line-height: 70px;
+  margin-left: 8px;
 
 }
 
@@ -131,7 +132,14 @@
   float: right;
   display: block;
 }
-
+#services-sub-menu {
+  overflow-y: scroll;
+    padding-left: 0; 
+    margin: 10px 0; 
+    list-style: none; 
+    height: 420px;
+    min-width: 20px;
+  }
 .wsmenu > .wsmenu-list {
   text-align: left;
   margin: 0 auto 0 auto;
@@ -366,7 +374,7 @@
   position: absolute;
   top: 70px;
   z-index: 1000;
-  margin: 0px;
+  margin:10px 0;
   padding: 12px;
   min-width: 200px;
   background-color: #fff;
