--- a/css/blue-theme.css
+++ b/css/blue-theme.css
@@ -11193,3 +11193,11 @@ body.theme--dark {
   color: #fff;
   margin-bottom: 0;
 }
+#services-sub-menu {
+  overflow-y: scroll;
+    padding-left: 0; 
+    margin: 10px 0; 
+    list-style: none; 
+    height: 420px;
+    min-width: 20px;
+  }
