--- a/css/menu.css
+++ b/css/menu.css
@@ -134,11 +134,13 @@
 }
 #services-sub-menu {
   overflow-y: scroll;
+  overflow-x: scroll;
     padding-left: 0; 
     margin: 10px 0; 
     list-style: none; 
     height: 420px;
     min-width: 20px;
+    
   }
 .wsmenu > .wsmenu-list {
   text-align: left;
@@ -253,7 +255,10 @@
   padding: 0px 30px 0px 20px;
   border-right: none;
 }
-
+.d-flex {
+  justify-content: space-between; 
+  align-items: center;           
+}
 .wsmenu > .wsmenu-list > li.rightmenu a i {
   font-size: 15px;
 }
