--- a/css/menu.css
+++ b/css/menu.css
@@ -39,7 +39,7 @@
   color:rgb(64, 173, 241);
 }
 .para:hover{
-  background-color: #2e78d2;
+  background-color: #1680fb;
   color: white;
   padding: 5px;
   border-radius: 5px;
